
syntax = "proto3";

package grpc;

service SendRetrieveDataService {
  rpc retrieveRqst(RetrieveDataRequest) returns(RetrieveDataResponse) {}
}

message RetrieveDataRequest {
  string clientId = 1;
  string jsonMsg = 2;
}

message RetrieveDataResponse {
  string clientId = 1;
  string jsonMsg = 2;
}
